--- a/templates/novo/css/screen.less
+++ b/templates/novo/css/screen.less
@@ -7,6 +7,9 @@
 */
 
 @media screen and (min-width: 15em) {
+	.sidebar {
+		order: 0;
+	}
 }
 
 
@@ -49,6 +52,14 @@
   Zoomed in above 912 px
 */
 @media screen and (min-width: 57em) {
+	.sidebar {
+		order: 1;
+		width: 40%;
+	}
+
+	.content {
+		width: 100%;
+	}
 }
 
 /*
